# SimpleML

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md  REPORT.md  SimpleML_Neural_Network_Report.docx
.cache/clangd/index/: Tensor.cpp.FC479FB3E879D8BF.idx  Tensor.h.B885216B114013A2.idx  main.cpp.4BAC9879F6FBDA2A.idx
examples/: main.cpp
include/: Activations.h  Dense.h  Layer.h  Loss.h  Optimizer.h  Sequential.h  Tensor.h
src/core/: Tensor.cpp
